--- a/src/HAI722I_Recherche_Operationnelle/tds/td_1.tex
+++ b/src/HAI722I_Recherche_Operationnelle/tds/td_1.tex
@@ -1489,7 +1489,7 @@
 
 
 % ----- Consignes exo 37 ----- %
-\begin{td-exo}[Lecture des variables duales] % 37
+\begin{td-exo}[Lecture des variables duales]\,\\ % 37
 	Soit le programme linéaire ci-dessous:
 	\begin{equation*}
 		PL_9 =
@@ -1512,6 +1512,19 @@
 % ----- Solutions exo 37 ----- %
 \iftoggle{showsolutions}{
 	\begin{td-sol}[]\ % 37
+		\begin{enumerate}
+			\item Le dual est le suivant:
+			\begin{equation*}
+				\begin{cases}
+					\min z(y_1,y_2,y_3) = 10y_1 + 6y_2 + 8y_3\\
+					y_1 + y_2 + 2y_3 \geq 2\\
+					5y_1 + 3y_2 + 2y_3 \geq 1\\
+					y_1,y_2,y_3\geq 0
+				\end{cases}
+			\end{equation*}
+
+			\item \, % TODO remplir les deux tableaux qui suivent.
+		\end{enumerate}
 	\end{td-sol}
 }{}
 
