corrected typo in H713 and bad pdf compilation

--- a/src/HAI713I_Logique_Calculabilite/tds/td_3.tex
+++ b/src/HAI713I_Logique_Calculabilite/tds/td_3.tex
@@ -66,7 +66,7 @@
 			\end{equation*}
 			Donc \(\bb K\prec \ol A\).
 
-			\item On sait que \(\ol{\bb K}\) n'est pas énumérable donc \(A\) est énumérable.
+			\item On sait que \(\ol{\bb K}\) n'est pas énumérable donc \(A\) n'est pas énumérable.
 			De même pour \(\ol A\). Donc ni \(A\) ni \(\ol A\) ne sont énumérables.
 		\end{enumerate}
 	\end{td-sol}
