corrected typo td1 H713

--- a/src/HAI713I_Logique_Calculabilite/tds/td_1.tex
+++ b/src/HAI713I_Logique_Calculabilite/tds/td_1.tex
@@ -265,10 +265,10 @@
 		il admet une fonction d'énumération totale bijective.
 
 		\item Soit \(E\) un ensemble infini. Montrez que \(E\) est récursif
-		si et suelement si il admet une fonction d'énumération croissante.
+		si et seulement si il admet une fonction d'énumération croissante.
 
 		\item Soit \(E\) un ensemble infini. Montrez que \(E\) est récursif
-		si et suelement si il admet une fonction d'énumération strictement croissante.
+		si et seulement si il admet une fonction d'énumération strictement croissante.
 	\end{enumerate}
 \end{td-exo}
 
