maj examen blanc H713 et tmp removed bad H710

--- a/src/HAI710I_Intelligence_Artificielle/tds/td_main.tex
+++ b/src/HAI710I_Intelligence_Artificielle/tds/td_main.tex
@@ -39,12 +39,12 @@
     \setcounter{tdcounter}{0}
     \input{../tds/td_3.tex}
 
-    \newpage
-    \section*{TD4 --- Résolution de CSP}\label{sec:TD4}
-    \addcontentsline{toc}{section}{\nameref{sec:TD4}}
-    \setcounter{section}{4}
-    \setcounter{tdcounter}{0}
-    \input{../tds/td_4.tex}
+    % \newpage
+    % \section*{TD4 --- Résolution de CSP}\label{sec:TD4}
+    % \addcontentsline{toc}{section}{\nameref{sec:TD4}}
+    % \setcounter{section}{4}
+    % \setcounter{tdcounter}{0}
+    % \input{../tds/td_4.tex}
 
     % \newpage
     % \section*{TD3 --- Satisfaction de contraintes}\label{sec:TD3}
