--- a/src/HAI713I_Logique_Calculabilite/tds/td_main.tex
+++ b/src/HAI713I_Logique_Calculabilite/tds/td_main.tex
@@ -37,5 +37,10 @@
     \section{TD5}\label{sec:TD5}
     \setcounter{tdcounter}{0}
     \input{../tds/td_5.tex}
+
+    \newpage
+    \section{Examen Blanc}\label{sec:Examen_Blanc}
+    \setcounter{tdcounter}{0}
+    \input{../tds/examen_blanc.tex}
 \end{document}
 
