maj exam blanc H713 - a finir

--- a/src/HAI713I_Logique_Calculabilite/tds/examen_blanc.tex
+++ b/src/HAI713I_Logique_Calculabilite/tds/examen_blanc.tex
@@ -109,7 +109,7 @@
 % ----- Solutions exo 3 ----- %
 \iftoggle{showsolutions}{
 	\begin{td-sol}[]\ % 3
-        
+        % le 1 = ez avec step
 	\end{td-sol}
 }{}
 
@@ -179,7 +179,8 @@
             \item Il renvoie un programme qui calcule la fonction constante de valeur 1 dans
             le premier cas et dans le deuxième cas, il peut renvoyer \(a\).
 
-            \item 
+            \item Il suffit d'appeler les deux fonctions et de filtrer pour avoir le bon resultat, comme
+            ça on evite de produire deux fois le meme programme.
         \end{enumerate}
 	\end{td-sol}
 }{}
