maj dm1 exo3 H711

--- a/src/HAI711I_Graphes_Structures/assets/tikz/dm_1_exo_1.tex
+++ b/src/HAI711I_Graphes_Structures/assets/tikz/dm_1_exo_1.tex
@@ -1,5 +1,5 @@
 \ffigbox[\FBwidth]{%
-\label{Fig:td1ex1c1}
+\label{Fig:dm1ex1}
 }{
     \fbox{
         \begin{tikzpicture}[scale=1, every node/.style={circle, draw, fill=blue!20, inner sep=1pt, font=\scriptsize, minimum size=4mm}]
