rajout exercice de preparation exam algebre

--- a/src/HAI702I_Algebre/tds/td_main.tex
+++ b/src/HAI702I_Algebre/tds/td_main.tex
@@ -38,5 +38,12 @@
     \setcounter{section}{3}
     \setcounter{tdcounter}{0}
     \input{../tds/td_3.tex}
+
+    \newpage
+    \section*{Préparation à l'examen}\label{sec:exam_prep}
+    \addcontentsline{toc}{section}{\nameref{sec:exam_prep}}
+    \setcounter{section}{4}
+    \setcounter{tdcounter}{0}
+    \input{../tds/prep_exam.tex}
 \end{document}
 
